// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thread should match snapshot, has root post 1`] = `
<Connect(SafeAreaIos)
  excludeHeader={true}
  keyboardOffset={20}
>
  <Connect(StatusBar) />
  <KeyboardLayout>
    <React.Fragment>
      <Connect(PostList)
        currentUserId="member_user_id"
        indicateNewMessages={false}
        lastPostIndex={-1}
        location="thread"
        navigator={
          Object {
            "dismissModal": [MockFunction],
            "pop": [MockFunction],
            "resetTo": [MockFunction],
            "setTitle": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "title": undefined,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
          }
        }
        onPostPress={[Function]}
        postIds={
          Array [
            "root_id",
            "post_id_1",
            "post_id_2",
          ]
        }
        renderFooter={
          <Loading
            color="grey"
            size="large"
            style={Object {}}
          />
        }
        scrollViewNativeID="threadPostList"
      />
      <Connect(FileUploadPreview)
        channelId="channel_id"
        rootId="root_id"
      />
      <ForwardRef(forwardConnectRef)
        cursorPositionEvent="onThreadTextBoxCursorChange"
        maxHeight={200}
        onChangeText={[Function]}
        rootId="root_id"
        valueEvent="onThreadTextBoxValueChange"
      />
    </React.Fragment>
  </KeyboardLayout>
  <KeyboardTrackingView
    onKeyboardHeightChange={[Function]}
    scrollViewNativeID="threadPostList"
  >
    <ForwardRef(forwardConnectRef)
      channelId="channel_id"
      channelIsArchived={false}
      cursorPositionEvent="onThreadTextBoxCursorChange"
      navigator={
        Object {
          "dismissModal": [MockFunction],
          "pop": [MockFunction],
          "resetTo": [MockFunction],
          "setTitle": [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "title": undefined,
                },
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        }
      }
      onCloseChannel={[Function]}
      rootId="root_id"
      valueEvent="onThreadTextBoxValueChange"
    />
  </KeyboardTrackingView>
</Connect(SafeAreaIos)>
`;

exports[`thread should match snapshot, no root post, loading 1`] = `
<Connect(SafeAreaIos)
  excludeHeader={true}
  keyboardOffset={20}
>
  <Connect(StatusBar) />
  <KeyboardLayout>
    <Loading
      color="grey"
      size="large"
      style={Object {}}
    />
  </KeyboardLayout>
</Connect(SafeAreaIos)>
`;

exports[`thread should match snapshot, render footer 1`] = `
<Connect(PostList)
  currentUserId="member_user_id"
  indicateNewMessages={false}
  lastPostIndex={-1}
  location="thread"
  navigator={
    Object {
      "dismissModal": [MockFunction],
      "pop": [MockFunction],
      "resetTo": [MockFunction],
      "setTitle": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "title": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  onPostPress={[Function]}
  postIds={
    Array [
      "root_id",
      "post_id_1",
      "post_id_2",
    ]
  }
  renderFooter={
    <Loading
      color="grey"
      size="large"
      style={Object {}}
    />
  }
  scrollViewNativeID="threadPostList"
/>
`;

exports[`thread should match snapshot, render footer 2`] = `
<Connect(PostList)
  currentUserId="member_user_id"
  indicateNewMessages={false}
  lastPostIndex={-1}
  lastViewedAt={0}
  location="thread"
  navigator={
    Object {
      "dismissModal": [MockFunction],
      "pop": [MockFunction],
      "resetTo": [MockFunction],
      "setTitle": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "title": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  onPostPress={[Function]}
  postIds={
    Array [
      "root_id",
      "post_id_1",
      "post_id_2",
    ]
  }
  renderFooter={null}
  scrollViewNativeID="threadPostList"
/>
`;

exports[`thread should match snapshot, render footer 3`] = `
<Connect(SafeAreaIos)
  excludeHeader={true}
  keyboardOffset={20}
>
  <Connect(StatusBar) />
  <KeyboardLayout>
    <Loading
      color="grey"
      size="large"
      style={Object {}}
    />
  </KeyboardLayout>
</Connect(SafeAreaIos)>
`;
